--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,9 @@
 html {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #app {
   width: 100%;
